modais de suporte - consertando os textos

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -192,6 +192,7 @@
                         <h5>Para realizar o cadastro de uma venda, você deverá seguir os seguintes passos: </h5>
                         <h6>• Selecionar a opção do tipo de venda (geral ou encomenda).</h6>
                         <h6>• Preencher os campos de acordo com a opção selecionada (exemplo: se o tipo de venda selecionada for geral,deverá preencher os campos de vendedor, data, total geral).</h6>
+                        <h6>• Após isso, deverá clicar em confirmar.</h6>
                         <h6>• Clicar na seta para prosseguir para a parte de forma de pagamento e preencher os campos.</h6>
                         <h6>• Para finalizar, você deverá clicar no botão cadastrar.</h6>
                         <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
