--- a/storage.html
+++ b/storage.html
@@ -195,8 +195,7 @@
                     </div>
                     <div class="modal-body">
                       <form>
-                        <h5>Nesta página, irá ter uma tabela com datas, descrição e usuário.</h5>
-                        <h6>• Você terá acesso ao que foi modificado no sistema, por quem de acordo com a data.</h6>
+                        <h5>Nesta página, irá ter uma tabela com o nome das produções e quantidade disponível.</h5>
                         <h6>• Caso deseje sair desta página, clique no "x" acima.</h6>
                       </form>
                     </div>
