--- a/sale_management.html
+++ b/sale_management.html
@@ -96,36 +96,31 @@
               </ul>
             </div>
           </li>
-          <div class="mb">
-            <li class="mb-1">
-              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
-                <div class="set1">
-                  <img src="./images/storage_white_24dp.svg" alt="" width="22">
-                  <li><a href="storage.html" class="link-dark rounded">Estoque</a></li>
-                </div>
-              </button>
-            </li>
-          </div>
-          <div class="mb">
-            <li class="mb-1">
-              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
-                <div class="set1">
-                  <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-                  <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
-                </div>
-              </button>
-            </li>
-          </div>
-          <div class="mb">
-            <li class="mb-1">
-              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
-                <div class="set1">
-                  <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-                  <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
-                </div>
-              </button>
-            </li>
-          </div>
+          <li class="mb">
+            <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+            <a href="storage.html" class="link-dark rounded"> 
+              <img src="./images/storage_white_24dp.svg" alt="">
+              <h4>Estoque</h4>
+            </a>
+            </button>
+          </li>
+          <!--<li class="mb">
+            <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+            <a href="orders.html" class="link-dark rounded"> 
+              <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
+              <h4>Encomendas</h4>
+            </a>
+            </button>
+          </li>-->
+          <li class="mb">
+            <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+            <a href="historic.html" class="link-dark rounded"> 
+              <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
+              <h4>Histórico</h4>
+            </a>
+            </button>
+          </li>
+          
           <!-- <div class="mb">
             <li class="mb-1">
               <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
@@ -136,16 +131,14 @@
               </button>
             </li>
           </div> -->
-          <div class="mb">
-            <li class="mb-1">
-              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
-                <div class="set1">
-                  <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-                  <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
-                </div>
-              </button>
-            </li>
-          </div>
+          <li class="mb">
+            <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+            <a href="prop.html" class="link-dark rounded"> 
+              <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+              <h4>Suporte</h4>
+            </a>
+            </button>
+          </li>
         </ul>
       </section>
 
