--- a/home.html
+++ b/home.html
@@ -207,7 +207,7 @@
               </tr>
             </tbody>
           </table>
-          <div class="link-see-more"><a href="">Ver Mais</a></div>    
+          <div class="link-see-more"><a href="sale_management.html">Ver Mais</a></div>    
         </section>
 
         <!--Tabela Validade dos Produtos-->
@@ -262,7 +262,7 @@
             </tr>
           </tbody>
         </table>
-          <div class="link-see-more"><a href="">Ver Mais</a></div>    
+          <div class="link-see-more"><a href="sale_management.html">Ver Mais</a></div>    
         </section>
       </section>
     </div>
