redirecionamento no botao de 'ver mais' de validade  na tela home

--- a/home.html
+++ b/home.html
@@ -262,7 +262,7 @@
             </tr>
           </tbody>
         </table>
-          <div class="link-see-more"><a href="sale_management.html">Ver Mais</a></div>    
+          <div class="link-see-more"><a href="production_management.html">Ver Mais</a></div>    
         </section>
       </section>
     </div>
